force-app/main/default/objects/Leaked_Admission__c/Leaked_Admission__c.object-meta.xml
<CustomObject>
    <label>Leaked Admission</label>
    <nameField>
        <label>Leaked Admission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leaked Admissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>