force-app/main/default/objects/Leaked_Admission__c/fields/Admission_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Admission_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission\Discharge</label>
    <referenceTo>Admission_Discharge__c</referenceTo>
    <relationshipLabel>Leaked Admissions</relationshipLabel>
    <relationshipName>Leaked_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>