force-app/main/default/objects/Leaked_Admission__c/fields/Admitted_To_Hospital_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Admitted_To_Hospital_DateTime__c</fullName>
    <formula>Hospital_Admission__r.Admit_DateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admitted To Hospital DateTime</label>
    <type>DateTime</type>
</CustomField>