force-app/main/default/objects/Leaked_Admission__c/fields/Discharge_From_Original_Facility_Date__c.field-meta.xml
<CustomField>
    <fullName>Discharge_From_Original_Facility_Date__c</fullName>
    <formula>Admission_Discharge__r.Census_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharge From Original Facility Date</label>
    <type>Date</type>
</CustomField>