force-app/main/default/objects/Leaked_Admission__c/fields/Discharged_Facility__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Facility__c</fullName>
    <formula>Patient__r.Facility__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharged Facility</label>
    <type>Text</type>
</CustomField>