force-app/main/default/objects/Leaked_Admission__c/fields/Discharged_Facility_State__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Facility_State__c</fullName>
    <formula>Patient__r.Facility_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharged Facility State</label>
    <type>Text</type>
</CustomField>