force-app/main/default/objects/Leaked_Admission__c/fields/Facility_Mapper__c.field-meta.xml
<CustomField>
    <fullName>Facility_Mapper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Mapper</label>
    <referenceTo>Facility_Mapper__c</referenceTo>
    <relationshipLabel>Leaked Admissions</relationshipLabel>
    <relationshipName>Leaked_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>