force-app/main/default/objects/Leaked_Admission__c/fields/Facility_Mapper_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Facility_Mapper_Parent_Company__c</fullName>
    <formula>Facility_Mapper__r.Facility__r.Parent_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Mapper Parent Company</label>
    <type>Text</type>
</CustomField>