force-app/main/default/objects/Leaked_Admission__c/fields/Hospital_Admission_From_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Admission_From_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital Admission From Discharge</label>
    <referenceTo>Hospital_Admission__c</referenceTo>
    <relationshipLabel>Leaked Admissions (Hospital Admission From Discharge)</relationshipLabel>
    <relationshipName>Leaked_Admissions1</relationshipName>
    <type>Lookup</type>
</CustomField>