force-app/main/default/objects/Leaked_Admission__c/fields/Hospital_Admitted_To__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Admitted_To__c</fullName>
    <formula>Hospital_Admission__r.Facility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Admitted To</label>
    <type>Text</type>
</CustomField>