force-app/main/default/objects/Leaked_Admission__c/fields/Leaked_Admission__c.field-meta.xml
<CustomField>
    <fullName>Leaked_Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leaked Admission</label>
    <referenceTo>Leaked_Admission__c</referenceTo>
    <relationshipLabel>Leaked Admissions</relationshipLabel>
    <relationshipName>Leaked_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>