force-app/main/default/objects/Leaked_Admission__c/fields/Primary_Icd10_Codes__c.field-meta.xml
<CustomField>
    <fullName>Primary_Icd10_Codes__c</fullName>
    <formula>Hospital_Admission__r.Primary_Icd10_Codes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Icd10 Codes</label>
    <type>Text</type>
</CustomField>