force-app/main/default/objects/Leaked_Admission__c/fields/Secondary_Icd10_Codes__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Icd10_Codes__c</fullName>
    <formula>Hospital_Admission__r.Secondary_Icd10_Codes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Icd10 Codes</label>
    <type>Text</type>
</CustomField>