force-app/main/default/objects/Leaked_Admission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Admission_DateTime__c</columns>
    <columns>Facility_Mapper__c</columns>
    <columns>Discharged_Facility__c</columns>
    <columns>Admission_Discharge__c</columns>
    <columns>Hospital_Admission__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>